@@ -58,12 +58,14 @@
         </dependency>
 
         <!-- Mockito -->
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-inline -->
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <artifactId>mockito-inline</artifactId>
             <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
+
 
 
         <!-- JavaFX Testing (for TestFX) -->
@@ -183,6 +185,7 @@
                         --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                         -Dnet.bytebuddy.experimental=true
+                        -XX:+EnableDynamicAgentLoading
                     </argLine>
                 </configuration>
             </plugin>
